--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="shortcut icon" type="image/png" href="Untitled presentation (5).png" />
+    <link rel="shortcut icon" type="image/png" href="whitelogo.png" />
     <title>NGINX Proxy</title>
 </head>
 
 <body>
     <div class="container">
-        <img src="Untitled presentation (5).png" width="250" height="250">
+        <img src="whitelogo.png">
         <div>
             <script>
                 function go() {
